Closed
Bug 224867
Opened 21 years ago
Closed 21 years ago
[FIX]resource:///res/samples/test0.html warnings/errors
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Tracking
()
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: mmokrejs, Assigned: bzbarsky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
2.95 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.4) Gecko/20030826
Build Identifier:
This is what I get in debug window on Tru64Unxi 5.1A with mozilla 20031105 snapshot:
frame: Text(0) (1414e6190) style: 1414e62a0 :-moz-non-element {}
Wrong parent style context: style: 1414e6250 :first-letter {}
should be using: style: 14138ffd0 :first-letter {}
frame: Letter(0) (1414e61f0) style: 1414e6250 :first-letter {}
Wrong parent style context: style: 1414e5dd8 :first-line {}
should be using: style: 14136c4c8 {}
Document resource:///res/samples/test0.html loaded successfully
Reproducible: Always
Steps to Reproduce:
1.
2.
3.
![]() |
Assignee | |
Comment 1•21 years ago
|
||
Bug 217225 fixes the second warning there. The first is due to applying
first-letter and first-line to the same element; not sure yet where it's coming
from.
![]() |
Assignee | |
Comment 2•21 years ago
|
||
The idea here is that we set the reparented style context on the frame before
reparenting the kids. That way, when the integrity checks are done on the kids
they will return the right things (since the parent of the style context will
in fact equal the style context of the parent; without this change that's not
the case).
![]() |
Assignee | |
Comment 3•21 years ago
|
||
Taking.
Assignee: dbaron → bz-vacation
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3
Summary: resource:///res/samples/test0.html warnings/errors → [FIX]resource:///res/samples/test0.html warnings/errors
Target Milestone: --- → mozilla1.6beta
![]() |
Assignee | |
Updated•21 years ago
|
Attachment #134960 -
Flags: superreview?(dbaron)
Attachment #134960 -
Flags: review?(dbaron)
Comment on attachment 134960 [details] [diff] [review]
Proposed patch
(At some point we should fix the bug on making ReParentStyleContext use
GetParentStyleContextFrame.)
Attachment #134960 -
Flags: superreview?(dbaron)
Attachment #134960 -
Flags: superreview+
Attachment #134960 -
Flags: review?(dbaron)
Attachment #134960 -
Flags: review+
![]() |
Assignee | |
Comment 5•21 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•