Fix some bogus style parentage warnings.  Bug 224867, r+sr=dbaron